Mint-Y-Cinnamon: Fix the size of the main menu applet entry
This fixes the bottom of some text being cut off

--- a/src/Mint-Y/cinnamon/cinnamon-dark.css
+++ b/src/Mint-Y/cinnamon/cinnamon-dark.css
@@ -1018,7 +1018,7 @@ StScrollBar {
 
 #menu-search-entry {
   width: 250px;
-  height: 15px;
+  height: 16px;
   font-weight: normal;
   caret-color: #D3D3D3; }
 
